# my-bot-motiv

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  GITHUB_SIMPLE.md  GITHUB_UPLOAD.md  INSTALL_GIT.md  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  motiv-bot.service  pyproject.toml  railway.json  requirements.txt
