[tool.poetry]
name = "motiv-bot"
version = "0.1.0"
description = "Telegram-бот для CPA-арбитражника"
authors = ["Никита <example@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
apscheduler = "^3.10.4"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
mypy = "^1.7.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"


